name:            shakespeare-i18n
version:         0.0.0
license:         BSD3
license-file:    LICENSE
author:          Michael Snoyman <michael@snoyman.com>
maintainer:      Michael Snoyman <michael@snoyman.com>
synopsis:        A type-based approach to internationalization.
description:
    This package uses the same approach of type-safe URLs to create translated content. It has a simple syntax for translators, while allowing the ful power of Haskell for applying complex grammar rules.
    .
    This package was spun off from yesod-core, and therefore the Yesod documentation is a good place to start in understanding this package. Please see <http://www.yesodweb.com/book/i18n> for more information.

category:        Web, Yesod
stability:       Stable
cabal-version:   >= 1.8
build-type:      Simple
homepage:        http://www.yesodweb.com/book/i18n

library
    build-depends:   base             >= 4       && < 5
                   , shakespeare      >= 0.10    && < 0.11
                   , template-haskell
                   , text             >= 0.7     && < 0.12
                   , parsec
                   , bytestring
                   , directory

    exposed-modules: Text.Shakespeare.I18N
    ghc-options:     -Wall

source-repository head
  type:     git
  location: git://github.com/yesodweb/hamlet.git
