name:            shakespeare-i18n
version:         1.0.0.1
license:         MIT
license-file:    LICENSE
author:          Michael Snoyman <michael@snoyman.com>
maintainer:      Michael Snoyman <michael@snoyman.com>
synopsis:        A type-based approach to internationalization.
description:
    This package uses a compile-time, type-safe approach to create translated content. It has a simple syntax for translators, while allowing the full power of Haskell for applying complex grammar rules.
    .
    This package was spun off from yesod-core, and therefore the Yesod documentation is a good place to start in understanding this package. Please see <http://www.yesodweb.com/book/shakespearean-templates> for more information.

category:        Web, Yesod
stability:       Stable
cabal-version:   >= 1.8
build-type:      Simple
homepage:        http://www.yesodweb.com/book/shakespearean-templates

library
    build-depends:   base             >= 4       && < 5
                   , shakespeare      >= 1.0     && < 1.1
                   , template-haskell
                   , text             >= 0.7     && < 0.12
                   , parsec
                   , bytestring
                   , directory

    exposed-modules: Text.Shakespeare.I18N
    ghc-options:     -Wall
    if impl(ghc >= 7.4)
       cpp-options: -DGHC_7_4

source-repository head
  type:     git
  location: git://github.com/yesodweb/shakespeare.git
