name:            shakespeare-js
version:         0.11.0.1
license:         BSD3
license-file:    LICENSE
author:          Michael Snoyman <michael@snoyman.com>
maintainer:      Michael Snoyman <michael@snoyman.com>
synopsis:        Stick your haskell variables into javascript/coffeescript at compile time.
description:
    Shakespeare is a template family for type-safe, efficient templates with simple variable interpolation . Shakespeare templates can be used inline with a quasi-quoter or in an external file. Shakespeare interpolates variables according to the type being inserted.
    In this case, the variable type needs a ToJavascript instance.
    .
    There is also shakespeare-coffeescript for coffeescript templates. Coffescript is a language that compiles down to javascript. It expects a coffeescript compiler in your path, and variable should be a ToCoffee instance.
    .
    Please see http://docs.yesodweb.com/book/templates for a more thorough description and examples
    .
    shakespeare-js was originally called julius, and shakespeare originated from the hamlet template package.
extra-source-files:
  test/juliuses/external1.coffee
  test/juliuses/external1.julius
  test/juliuses/external2.julius
  test/ShakespeareJsTest.hs
  test.hs

category:        Web, Yesod
stability:       Stable
cabal-version:   >= 1.8
build-type:      Simple
homepage:        http://www.yesodweb.com/book/templates

library
    build-depends:   base             >= 4       && < 5
                   , shakespeare      >= 0.10.3  && < 0.11
                   , template-haskell
                   , text             >= 0.7     && < 0.12

    exposed-modules:
                     Text.Julius
                     Text.Coffee
    ghc-options:     -Wall
    if impl(ghc >= 7.4)
       cpp-options: -DGHC_7_4

    if flag(test_coffee)
        cpp-options: -DTEST_COFFEE

    if flag(test_export)
        cpp-options: -DTEST_EXPORT

flag test_export
    default: False

flag test_coffee
    description: render tests through coffeescript render function
    -- cabal configure --enable-tests -ftest_coffee && cabal build && dist/build/test/test
    default: False

test-suite test
    hs-source-dirs: test
    main-is: ../test.hs
    type: exitcode-stdio-1.0

    ghc-options:   -Wall
    build-depends: shakespeare-js   >= 0.11    && < 0.12
                 , shakespeare      >= 0.10.3  && < 0.11
                 , base             >= 4       && < 5
                 , HUnit
                 , hspec            >= 0.8     && < 0.10
                 , text             >= 0.7     && < 0.12
                 , template-haskell

-- cabal bug
--    if flag(test_coffee)
--        cpp-options: -DTEST_COFFEE


source-repository head
  type:     git
  location: git://github.com/yesodweb/hamlet.git
