name:            shakespeare-js
version:         1.2.0.2
license:         MIT
license-file:    LICENSE
author:          Michael Snoyman <michael@snoyman.com>
maintainer:      Michael Snoyman <michael@snoyman.com>, Greg Weber <greg@gregweber.info>
synopsis:        Stick your haskell variables into javascript/coffeescript at compile time.
description:
    Shakespeare is a template family for type-safe, efficient templates with simple variable interpolation. Shakespeare templates can be used inline with a quasi-quoter or in an external file. Shakespeare interpolates variables according to the type being inserted.
    In this case, the variable type needs a ToJavascript instance.
    .
    shakespeare-javascript is alson known as Julius, and passes through plain javascript
    .
    There is also a shakespeare version for CoffeeScript, TypeScript, and Roy, all languages that compile down to Javascript. They all expect you to have the appropriate compiler in your path.
    .
    shakespeare originated from the hamlet template package.
    Please see http://www.yesodweb.com/book/shakespearean-templates for a more thorough description and examples
    .
extra-source-files:
  test/juliuses/external1.coffee
  test/juliuses/external1.julius
  test/juliuses/external2.julius
  test/ShakespeareJsTest.hs
  test.hs

category:        Web, Yesod
stability:       Stable
cabal-version:   >= 1.8
build-type:      Simple
homepage:        http://www.yesodweb.com/book/shakespearean-templates

library
    build-depends:   base             >= 4       && < 5
                   , shakespeare      >= 1.2     && < 1.3
                   , template-haskell
                   , text             >= 0.7
                   , aeson            >= 0.5

    exposed-modules:
                     Text.Julius
                     Text.Coffee
                     Text.Roy
                     Text.TypeScript
    ghc-options:     -Wall
    if impl(ghc >= 7.4)
       cpp-options: -DGHC_7_4

    if flag(test_coffee)
        cpp-options: -DTEST_COFFEE

    if flag(test_roy)
        cpp-options: -DTEST_ROY

    if flag(test_export)
        cpp-options: -DTEST_EXPORT

    extensions: TemplateHaskell

flag test_export
    default: False

flag test_coffee
    description: render tests through coffeescript render function
    -- cabal configure --enable-tests -ftest_coffee && cabal build && dist/build/test/test
    default: False

flag test_roy
    description: render tests through coffeescript render function
    -- cabal configure --enable-tests -ftest_coffee && cabal build && dist/build/test/test
    default: False

test-suite test
    hs-source-dirs: test ./
    main-is: ../test.hs
    other-modules: Quoter
    type: exitcode-stdio-1.0

    ghc-options:   -Wall
    build-depends:
                   shakespeare
                 , base
                 , HUnit
                 , hspec            >= 1.3
                 , text
                 , template-haskell
                 , aeson

    cpp-options: -DTEST_EXPORT
    if flag(test_coffee)
        cpp-options: -DTEST_COFFEE
    if flag(test_roy)
        cpp-options: -DTEST_ROY

    extensions: TemplateHaskell


source-repository head
  type:     git
  location: git://github.com/yesodweb/shakespeare.git
