name:            shakespeare-test
version:         0.1.0.1
license:         MIT
license-file:    LICENSE
author:          Michael Snoyman <michael@snoyman.com>
maintainer:      Michael Snoyman <michael@snoyman.com>
synopsis:        Tests for Shakespeare
description:     Tests for Shakespeare
category:        Web, Yesod
stability:       Stable
cabal-version:   >= 1.8
build-type:      Simple
homepage:        http://www.yesodweb.com/book/shakespearean-templates

extra-source-files:
  main.hs

library
    exposed-modules:
                     Text.Shakespeare
                     Text.Shakespeare.Base
                     Text.Julius
                     Text.Coffee
                     Text.Roy
                     Text.Hamlet
                     Text.Hamlet.Parse

    build-depends:   base             >= 4       && < 5
                   , time             >= 1
                   , system-filepath  >= 0.4
                   , system-fileio    >= 0.3
                   , containers
                   , template-haskell
                   , parsec           >= 2       && < 4
                   , text             >= 0.7
                   , process          >= 1.0     && < 1.2
                   , aeson            >= 0.5
                   , blaze-html       >= 0.5
                   , blaze-markup     >= 0.5.1

    hs-source-dirs: ., shakespeare, shakespeare-js, hamlet

    ghc-options:   -Wall
    cpp-options:   -DTEST -DTEST_EXPORT
    if impl(ghc >= 7.4)
       cpp-options: -DGHC_7_4

flag test_coffee
    description: render tests through coffeescript render function
    -- cabal configure --enable-tests -ftest_coffee && cabal build && dist/build/test/test
    default: False

flag test_roy
    description: render tests through roy render function
    -- cabal configure --enable-tests -ftest_coffee && cabal build && dist/build/test/test
    default: False

test-suite test
    type:          exitcode-stdio-1.0
    main-is:       main.hs
    hs-source-dirs: ., shakespeare-js/test, shakespeare/test, hamlet/test

    build-depends:   base >= 4 && < 5
                   , time             >= 1
                   , system-filepath  >= 0.4
                   , system-fileio    >= 0.3
                   , containers
                   , shakespeare-test
                   , hspec
                   , HUnit
                   , text             >= 0.7
                   , template-haskell
                   , parsec           >= 2       && < 4
                   , aeson
                   , blaze-html       >= 0.5
                   , blaze-markup     >= 0.5.1


    -- if impl(ghc >= 7.4)
    --   cpp-options: -DGHC_7_4

    if flag(test_coffee)
        cpp-options: -DTEST_COFFEE

    if flag(test_roy)
        cpp-options: -DTEST_ROY


source-repository head
  type:     git
  location: git://github.com/yesodweb/shakespeare-test.git
