name:            shakespeare-text
version:         0.10.5
license:         BSD3
license-file:    LICENSE
author:          Greg Weber <greg@gregweber.info>
maintainer:      Greg Weber <greg@gregweber.info>
synopsis:        Interpolation with quasi-quotation: put variables strings
description:
    interpolation with quasi-quotation: stick haskell variables into haskell strings
    .
    Note there is no dependency on haskell-src-extras. If you don't mind that dependency, you may want to look at using these packages: Interpolation, interpolatedstring-perl6, interpolatedstring-qq.
    .
    This package has 1 other general feature that those others may not (but would be easy to duplicate): instead of using quasi-quoting you can also use an external file. It also has url/embeding interpolation, with \@ and \^, which are used in Yesod.
    .
    This package also uses blaze-builder for efficiently constructing strings (I am not sure what the other packages use). This might be of interest to you for large templates or performance sensitive code, or otherwise having a nice interface to blaze-builder
    .
    Shakespeare is a template family for type-safe, efficient templates with simple variable interpolation . Shakespeare templates can be used inline with a quasi-quoter or in an external file. Shakespeare interpolates variables according to the type being inserted.
    In this case, the variable type needs a ToText instance.
    .
    Please see http://docs.yesodweb.com/book/templates for a more thorough description and examples of the shakespeare family of template languages.

category:        Web, Yesod
stability:       Stable
cabal-version:   >= 1.8
build-type:      Simple
homepage:        http://www.yesodweb.com/book/templates
extra-source-files:
  test/texts/external1.text
  test/texts/external2.text
  test/ShakespeareTextTest.hs
  test.hs

library
    build-depends:   base             >= 4       && < 5
                   , shakespeare      >= 0.10    && < 0.11
                   , template-haskell
                   , text             >= 0.7     && < 0.12

    exposed-modules: Text.Shakespeare.Text
    ghc-options:     -Wall
    if impl(ghc >= 7.4)
       cpp-options: -DGHC_7_4

test-suite test
    hs-source-dirs: test
    main-is: ../test.hs
    type: exitcode-stdio-1.0

    ghc-options:   -Wall
    build-depends:
                   shakespeare-text >= 0.10 && < 0.11
                 , base             >= 4       && < 5
                 , HUnit
                 , hspec            >= 0.8     && < 0.10
                 , text             >= 0.7     && < 0.12


source-repository head
  type:     git
  location: git://github.com/yesodweb/hamlet.git
