name:            shakespeare
version:         0.10.3
license:         BSD3
license-file:    LICENSE
author:          Michael Snoyman <michael@snoyman.com>
maintainer:      Michael Snoyman <michael@snoyman.com>
synopsis:        A toolkit for making compile-time interpolated templates
description:
    Shakespeare is a family of type-safe, efficient template languages. Shakespeare templates are expanded at compile-time, ensuring that all interpolated variables are in scope. Variables are interpolated according to their type through a typeclass.
    .
    Shakespeare templates can be used inline with a quasi-quoter or in an external file.
    .
    Note there is no dependency on haskell-src-extras. Instead Shakespeare believes logic should stay out of templates and has its own minimal Haskell parser.
    .
    Packages that use this: shakespeare-js, shakespeare-css, shakespeare-text, hamlet, and xml-hamlet
    .
    Please see the documentation at <http://docs.yesodweb.com/book/hamlet/> for more details.

category:        Web, Yesod
stability:       Stable
cabal-version:   >= 1.8
build-type:      Simple
homepage:        http://www.yesodweb.com/book/templates

library
    build-depends:   base             >= 4       && < 5
                   , template-haskell
                   , parsec           >= 2       && < 4
                   , text             >= 0.7     && < 0.12
                   , process          >= 1.0     && < 1.2

    exposed-modules: 
                     Text.Shakespeare
                     Text.Shakespeare.Base
    ghc-options:     -Wall

    if flag(test_export)
      cpp-options: -DTEST_EXPORT

Flag test_export
  default: False

test-suite test
    hs-source-dirs: test
    main-is: ../test.hs
    type: exitcode-stdio-1.0

    ghc-options:   -Wall
    build-depends: shakespeare      >= 0.10.3  && < 0.11
                 , base             >= 4       && < 5
                 , parsec           >= 2       && < 4
                 , HUnit
                 , hspec            >= 0.8     && < 0.10
                 , text             >= 0.7     && < 0.12


source-repository head
  type:     git
  location: git://github.com/yesodweb/hamlet.git
