name:            shakespeare
version:         1.3.0
license:         MIT
license-file:    LICENSE
author:          Michael Snoyman <michael@snoyman.com>
maintainer:      Michael Snoyman <michael@snoyman.com>
synopsis:        A toolkit for making compile-time interpolated templates
description:
    Shakespeare is a family of type-safe, efficient template languages. Shakespeare templates are expanded at compile-time, ensuring that all interpolated variables are in scope. Variables are interpolated according to their type through a typeclass.
    .
    Shakespeare templates can be used inline with a quasi-quoter or in an external file.
    .
    Note there is no dependency on haskell-src-extras. Instead Shakespeare believes logic should stay out of templates and has its own minimal Haskell parser.
    .
    Packages that use this: shakespeare-js, shakespeare-css, shakespeare-text, hamlet, and xml-hamlet
    .
    Please see the documentation at <http://www.yesodweb.com/book/shakespearean-templates> for more details.

category:        Web, Yesod
stability:       Stable
cabal-version:   >= 1.8
build-type:      Simple
homepage:        http://www.yesodweb.com/book/shakespearean-templates
extra-source-files: test/reload.txt
extra-source-files:
  test/reload.txt
  test/texts/*.text
  test/ShakespeareTextTest.hs
  test-messages/*.msg

library
    build-depends:   base             >= 4       && < 5
                   , time             >= 1
                   , system-filepath  >= 0.4
                   , system-fileio    >= 0.3
                   , containers
                   , template-haskell
                   , parsec           >= 2       && < 4
                   , text             >= 0.7
                   , process          >= 1.0
                   , ghc-prim
                   , bytestring
                   , directory

    exposed-modules: Text.Shakespeare.I18N
                     Text.Shakespeare.Text
    other-modules:   Text.Shakespeare
                     Text.Shakespeare.Base
    ghc-options:     -Wall

    if flag(test_export)
      cpp-options: -DTEST_EXPORT

    extensions: TemplateHaskell

    if impl(ghc >= 7.4)
       cpp-options: -DGHC_7_4

    if os(windows)
      CPP-Options: "-DWINDOWS"

Flag test_export
  default: False

test-suite test
    hs-source-dirs: ., test
    main-is: Spec.hs
    other-modules:  Text.Shakespeare.BaseSpec
                    Text.Shakespeare.I18NSpec
                    Text.Shakespeare.TextSpec

    cpp-options: -DTEST_EXPORT

    type: exitcode-stdio-1.0

    ghc-options:   -Wall
    build-depends: base             >= 4       && < 5
                 , time             >= 1
                 , system-filepath  >= 0.4
                 , system-fileio    >= 0.3
                 , containers
                 , parsec           >= 2       && < 4
                 , hspec            >= 1.3
                 , text             >= 0.7
                 , process
                 , template-haskell
                 , ghc-prim
                 , HUnit
                 , bytestring
                 , directory

    extensions: TemplateHaskell


source-repository head
  type:     git
  location: git://github.com/yesodweb/shakespeare.git
